add pages locally